ymls/user-provider.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-provider
spec:
  selector:
    matchLabels:
      app: user-provider
  replicas: 2
  template:
    metadata:
      labels:
        app: user-provider
    spec:
      containers:
        - name: user-provider
          image: namimono/second-cloud-user-provider
          imagePullPolicy: Always
          ports:
            - containerPort: 8088

---
apiVersion: v1
kind: Service
metadata:
  name: user-provider
  labels:
    svc: user-provider
spec:
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
  selector:
    app: user-provider
---

apiVersion: v1
kind: Endpoints
metadata:
  name: nacos-svc
subsets:
  - addresses:
      - ip: 192.168.56.101
    ports:
      - port: 8848
